[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/msgBaseX/msgBaseX.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/ui/standartBar_01.png" type="Texture" id=2]
[ext_resource path="res://ui/modSubMsg/minModDown.gd" type="Script" id=3]

[node name="msgBaseX" instance=ExtResource( 1 )]
margin_left = 93.0
margin_top = 70.0
margin_right = -67.0
margin_bottom = -149.0
script = ExtResource( 3 )

[node name="standartBar_01" type="NinePatchRect" parent="." index="0"]
margin_left = 267.78
margin_top = 108.83
margin_right = 1221.78
margin_bottom = 493.83
texture = ExtResource( 2 )
patch_margin_left = 73
patch_margin_top = 212
patch_margin_right = 89
patch_margin_bottom = 152
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="." index="1"]
margin_left = 487.0
margin_top = 252.0
margin_right = 976.0
margin_bottom = 294.0
text = "下载中"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="." index="2"]
margin_left = 616.0
margin_top = 364.0
margin_right = 852.0
margin_bottom = 416.375
text = "完成"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 0.5

[node name="Label2" type="Label" parent="." index="4"]
margin_left = 453.0
margin_top = 308.0
margin_right = 1011.0
margin_bottom = 350.0
text = "100/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="." index="5"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
